# Scientific-Visualization

./: README.md
ReebSpace/: LICENSE  README
ReebSpace/cmd/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
ReebSpace/wtfit/: wtfit.doxygen
contourForests/: README
contourForests/cmd/: CMakeLists.txt  Editor.cpp  Editor.h
contourForests/wtfit/: wtfit.cmake
fastExactFiberSurface/: README.txt
fastExactFiberSurface/data/: black_polygon.vtu  blue_polygon.vtu  green_polygon.vtu  red_polygon.vtu  teaser_polygon.vtu
fastExactFiberSurface/src/: CMakeLists.txt  main.cpp
fastExactFiberSurface/src/bvh/: bvh.c  bvh.h  time_.h
fastExactFiberSurface/src/fiberSurface/: extract_surface.hpp  extract_surface_grey.hpp  extract_surface_grey_minimal.hpp  vtkCleanUnstructuredGrid.h  vtkFiberSurfaceFilter.cpp  vtkFiberSurfaceFilter.h
fastExactFiberSurface/src/octree/: RangeDrivenOctree.cpp  RangeDrivenOctree.h
fastExactFiberSurface/src/wtfit/: CommandLineParser.h  Debug.cpp  Debug.h  Os.h  Wrapper.h
generalizedTopologicalSimplification/: CMakeLists.txt  Editor.cpp  Editor.h  README  main.cpp
generalizedTopologicalSimplification/baseCode/common/: Debug.h
generalizedTopologicalSimplification/baseCode/mesh/: TriangleMesh.cpp  TriangleMesh.h  mesh.cmake
generalizedTopologicalSimplification/baseCode/surfaceScalarField/: SurfaceScalarField.cpp  SurfaceScalarField.h  surfaceScalarField.cmake
generalizedTopologicalSimplification/data/figure01/: area.stf  inputField.ssf  persistence.stf  random.stf  user.stf
generalizedTopologicalSimplification/data/figure05/: constrainedTopology.stf  inputField.ssf  inputSurface.off
generalizedTopologicalSimplification/data/figure07/: constrainedTopology1.stf  constrainedTopology2.stf  inputField.ssf  inputSurface.off
generalizedTopologicalSimplification/data/figure10/: constrainedTopology1.stf  constrainedTopology2.stf  constrainedTopology3.stf
generalizedTopologicalSimplification/data/figure11/: constrainedTopology.stf  inputField.ssf  inputSurface.off
mvcJacobianHessian/: CMakeLists.txt  README  main.cpp
mvcJacobianHessian/include/: MVC_Equiv.h  MVCoordinates2D.h  MVCoordinates3D.h
mvcJacobianHessian/models/: DISCLAIMER  cage.off
mvcJacobianHessian/shared/: BasicIO.h  point2.h  point3.h
(+383 files in other folders)
